--- a/css/style.css
+++ b/css/style.css
@@ -418,7 +418,7 @@ input[type="checkbox"], input[type="radio"] {
     margin-top: 2rem;
     padding: 1.5rem 0;
     border-top: 1px solid var(--border-color);
-    text-align: right;
+    text-align: center;
     color: var(--text-secondary);
     line-height: 1.5;
     font-size: 0.95rem;
