--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,10 @@ header {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+    align-items: flex-start;
 }
 
 .site-network-link {
@@ -86,10 +90,18 @@ header {
     display: inline-flex;
     align-items: center;
     gap: 0.25rem;
+    line-height: 1.2;
 }
 
 .site-network-link .material-icons {
-    font-size: 1.1em;
+    font-size: 1rem;
+}
+
+.site-network-icon {
+    width: 1rem;
+    height: 1rem;
+    object-fit: contain;
+    flex: 0 0 auto;
 }
 
 .site-network-link:hover {
@@ -503,7 +515,10 @@ input[type="checkbox"], input[type="radio"] {
         width: 100%;
         margin-top: 1rem;
         display: flex;
+        flex-direction: column;
+        gap: 0.35rem;
         justify-content: center;
+        align-items: center;
     }
 
     header {
